elfeed font Rime

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "emacs.d/nonelpa/awesome-tab"]
 	path = emacs.d/nonelpa/awesome-tab
 	url = https://github.com/manateelazycat/awesome-tab.git
+[submodule "emacs.d/nonelpa/sdcv"]
+	path = emacs.d/nonelpa/sdcv
+	url = https://github.com/manateelazycat/sdcv.git
