--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-
 .DS_Store
 emacs.d/bookmarks
 emacs.d/backup/*
 emacs.d/auto-save-list/*
+emacs.d/backups/*
+emacs.d/.cache/*
+emacs.d/elpa/*
+emacs.d/eshell/*
+emacs.d/url/*
+emacs.d/package-quickstart.el
+emacs.d/package-quickstart.elc
+emacs.d/projects
+emacs.d/places
+emacs.d/recentf
+emacs.d/tramp
+emacs.d/history
+emacs.d/ido.last
