--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ emacs.d/eln-cache/*
 emacs.d/org-roam.db
 emacs.d/.emacs.desktop
 emacs.d/.org-id-locations
+emacs.d/.emacs.desktop*
+emacs.d/librime/*
+
