--- a/Rime/default.custom.yaml
+++ b/Rime/default.custom.yaml
@@ -14,7 +14,7 @@ patch:
   menu/page_size: 6
   ascii_composer/good_old_caps_lock: false
   ascii_composer/switch_key:
-    Shift_L: commit_text
+    Shift_L: inline_ascii
     Shift_R: commit_code # macOS 上此项无效，Windows 可用右 Shift 切换中英输入
     Control_L: noop
     Control_R: noop # macOS 上此项无效，Windows 上可自行定义
