add boostrp paq and clean nvim config

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "emacs.d/nonelpa/aweshell"]
 	path = emacs.d/nonelpa/aweshell
 	url = https://github.com/manateelazycat/aweshell.git
+[submodule "miniplug"]
+	path = miniplug
+	url = https://github.com/YerinAlexey/miniplug.git
