delete awesome & some windows setup

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ emacs.d/.emacs.desktop
 emacs.d/.org-id-locations
 emacs.d/.emacs.desktop*
 emacs.d/librime/*
-emacs.d/elfeed_db/*
+emacs.d/elfeed-db/*
 emacs.d/network-security.data
 emacs.d/desktop.saved/*
