nnrss and gnus topic & delete cal-chinese-x

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,7 @@ emacs.d/librime/*
 emacs.d/elfeed-db/*
 emacs.d/network-security.data
 emacs.d/desktop.saved/*
+emacs.d/News/*
 newsrc-dribble
+newsrc.eld
+emacs.d/newsticker
