--- a/gnupg.d/gpg.conf
+++ b/gnupg.d/gpg.conf
@@ -49,9 +49,9 @@ verify-options show-uid-validity
 # to handle such lines in a special way when creating cleartext signatures; all
 # other PGP versions do it this way too.  To enable full OpenPGP compliance you
 # may want to use this option.
-# no-escape-from-lines
+no-escape-from-lines
 
-no-symkey-cache
+# no-symkey-cache
 
 # ┌───────────────────────────────────────────────────────────────────────────┐
 # │ Algorithms and ciphers                                                    │
